--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,24 @@ Temporary Items
 /test/version_tmp/
 /tmp/
 
+### Go ###
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+### Go Patch ###
+/vendor/
+/Godeps/
+
 # Used by dotenv library to load environment variables.
 # .env
 
