Ensured that go-fed is tracked, updated README.md

--- a/go/Gopkg.toml
+++ b/go/Gopkg.toml
@@ -28,3 +28,7 @@
 [prune]
   go-tests = true
   unused-packages = true
+
+[[constraint]]
+  name = "github.com/go-fed/activity"
+  version = "0.4.0"
